# llmmllab-runner

./: .dockerignore  .gitignore  .gitmodules  .models.small.yaml  .models.yaml  .pylintrc  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  app.py  build-image.sh  cache.py  config.py  env.sh  generate-models.sh  models.py  mypy.ini  pipeline_cache.py  pipeline_factory.py  pyproject.toml  pyrightconfig.json  requirements.txt
k8s/: Dockerfile  apply.sh  build.sh  deployment.yaml  init-script.yaml  pvc.yaml  service.yaml
models/: __init__.py  _protobuf_translators_local.py  chat_response.py  circuit_breaker_config.py  complexity_level.py  computational_requirement.py  config_utils.py  crash_prevention.py  default_configs.py  dev_stats.py  document.py  event_stream_config.py  generation_state.py  gpu_config.py  image_generation_config.py  intent_analysis.py  learned_limits.py  lora_weight.py  memory_config.py  message.py  message_content.py  message_content_type.py  message_role.py  ml_model_performance.py  model.py  model_configuration_data.py  model_details.py  model_parameters.py  model_profile.py  model_profile_config.py  model_profile_image_settings.py  model_profile_type.py  model_provider.py  model_task.py  node_metadata.py  oom_recovery_attempt_data.py  optimal_parameters.py  parameter_optimization_config.py  parameter_tuning_strategy.py  performance_parameter.py  (+17 more)
pipelines/: base.py  pipeline_cache.py  pipeline_factory.py  simplification_plan.md
proxy/: router.py
routers/: models.py  servers.py
server/: grpc.py  interceptors.py
test/: __init__.py
(+28 files in other folders)
